<resources>
    <string name="app_name">Assignment1_ConstraintLayout</string>
    <string name="login">Login</string>
    <string name="email_mobile">EMAIL/MOBILE</string>
    <string name="password">PASSWORD</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="todo">TODO</string>
</resources>