<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="com.hk.assignment1_constraintlayout.viewModels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        tools:context=".ui.auth.login.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:subtitleTextColor="#FFEBEE">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="16dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="16dp"
            android:weightSum="1.1"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:background="@drawable/layout_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.8"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.41000003">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/emblem"
                    app:layout_constraintBottom_toTopOf="@+id/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:text="@={LoginViewModel.EmailAddress}"
                    android:hint="@string/email_mobile"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={LoginViewModel.Password}"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/remember_me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/sign_in"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:onClick="@{(v) -> LoginViewModel.onClick(v)}"
                    android:background="@drawable/button_background"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.96"
                    app:layout_constraintStart_toStartOf="@+id/checkbox"
                    android:contentDescription="@string/todo" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/signup"
                    app:layout_constraintEnd_toEndOf="@+id/signup"
                    app:layout_constraintStart_toStartOf="@+id/signup" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/button_background"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>